--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -264,16 +264,16 @@ header {
 
 .logo {
   display: block;
-  /*width: 38px;
-  color: var(--prim-color);
+  width: auto;
+  /*color: var(--prim-color);
   font: 24px/1 "SegoeUIBold", sans-serif;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
   -webkit-transform-origin: right;
   -ms-transform-origin: right;
-  transform-origin: right;
-  margin: -28px -22px 0 0;*/
+  transform-origin: right;*/
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
+  margin: 0;
   position: absolute;
   top: 4px;
   left: 4px;
