Add ivi, yandex

--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -2865,6 +2865,15 @@ footer {
 .main #black-star-wear-russia img {
   width: 98%;
 }
+.main #yandeks_eda-russia img {
+  width: 98%;
+}
+.main #onlajn-kinoteatr-ivi-russia img {
+  width: 92%;
+}
+.main #onlajn-kinoteatr-ivi-russia img {
+  width: 100%;
+}
 /* .main #lush-russia {
   background: #1f191a;
 }
