--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -2874,6 +2874,12 @@ footer {
 .main #onlajn-kinoteatr-ivi-russia img {
   width: 100%;
 }
+.main #playstation-russia img {
+  width: 96%;
+}
+.main #tutu_ru-russia img {
+  width: 96%;
+}
 /* .main #lush-russia {
   background: #1f191a;
 }
