--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -2721,8 +2721,10 @@ footer {
   overflow: hidden;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-box-shadow: 0 10px 22px 0 rgba(184, 195, 212, 0.4);
-          box-shadow: 0 10px 22px 0 rgba(184, 195, 212, 0.4);
+  /* -webkit-box-shadow: 0 10px 22px 0 rgba(184, 195, 212, 0.4);
+          box-shadow: 0 10px 22px 0 rgba(184, 195, 212, 0.4); */
+  -webkit-box-shadow: 1px 2px 6px 2px rgba(184, 195, 212, 0.4);
+          box-shadow: 1px 2px 6px 2px rgba(184, 195, 212, 0.4);
 }
 .main .transfer-items .transfer__item .text__item {
   font: 12px/1.2 "SegoeUIBold", sans-serif;
