--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -378,7 +378,7 @@ header {
 .menu {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   opacity: 0;
