--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -112,7 +112,7 @@ textarea {
   width: auto;
   height: 30px;
   margin: 0 auto;
-  padding: 0 18px;
+  padding: 0 17px;
   padding-bottom: 30px;
   border-radius: 18px;
   font-size: 14px;
@@ -143,7 +143,8 @@ textarea {
   margin: 0 auto;
   margin-top: 24px;
   text-align: center;
-  background: #f4f4f4 !important; }
+  background: #f4f4f4 !important;
+  padding-top: 0px; }
   .btn-back img {
     margin-right: 6px;
     margin-bottom: -2px; }
