--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -2230,7 +2230,7 @@ footer {
       margin-right: 28px;
       margin-left: 18%;
       margin-bottom: -9px; }
-.content__choose-wallet-new .btn {
+.content__choose-wallet-new .btn:not(.btn-back) {
   text-align: left;
 }
 .content__attach-messege {
