--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -91,7 +91,13 @@ textarea {
   max-width: 320px;
   margin: 0 auto;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
+
+.container-medium {
+  max-width: 375px;
+  margin: 0 auto;
+}
 
 .btn {
   width: 100%;
