Fix width from logo in modal

--- a/www/static/assets/css/style_alt.css
+++ b/www/static/assets/css/style_alt.css
@@ -1023,6 +1023,7 @@ header {
   background: #003295;
 }
 .modal-sevices .modal-header img {
+  max-width: 290px;
   max-height: 100px;
 }
 .modal-sevices .modal-header .close-modal {
